Redesigned the dependency handling by allowing node to take care of it (module caching). Create catch all 404 page (for now). Moved a lot of plumbing into a new common.js file.

--- a/app/lang/en.json
+++ b/app/lang/en.json
@@ -3,7 +3,10 @@
 		"page": {
 			"error": {
 				"save": "Could not save the page.",
-				"load": "Could not find the page requested."
+				"load": {
+					"title": "Page not found",
+					"message": "Could not find the page requested."
+				}
 			}
 		},
 		"section": {},
