More refactoring and work on the setup process. * Reverted to using <% %> for EJS templates to avoid confusion with Mustache * Moved setup functionality into setup controller * Made the controller functions available through the common Johannes object * Added a setup specific client side JS file * Set the package version to a valid number

--- a/app/lang/en.json
+++ b/app/lang/en.json
@@ -18,24 +18,13 @@
 		}
 	},
 	"controller": {
-		"admin": {
-			"title": "Manage your site"
-		},
-		"main": {
-			"setup": {
+		"setup": {
+			"index": {
 				"title": "Welcome to Johannes",
 				"intro": "You have taken the first few steps toward a more pleasant content experience. You can <a href=\"/_johannes\">learn more about Johannes</a> or finishes the process below.",
 				"noDb": "We had a problem trying to connect to your CouchDB server. Check your settings in the <code>config.json</code> file and try reloading this page.",
 				"remote": "You are trying to access Johannes from another computer while it is not setup. By default this isn't allowed. If you need to do it, then edit the <code>config.json</code> file.",
 				"start": "Your system is ready to be setup. Follow the steps below to get started."
-			},
-			"siteInfo": {
-				"label": {
-					"sitename": "Site name"
-				},
-				"button": {
-					"submit": "Next &rsaquo;"
-				}
 			},
 			"dbInfo": {
 				"label": {
@@ -51,7 +40,10 @@
 				"button": {
 					"submit": "Save Database Information &rsaquo;"
 				}
-			},
+			}
+		},
+		"admin": {
+			"title": "Manage your site",
 			"newUser": {
 				"label": {
 					"username": "Username",
@@ -61,7 +53,18 @@
 				"button": {
 					"submit": "Next &rsaquo;"
 				}
+			},
+			"siteInfo": {
+				"label": {
+					"sitename": "Site name"
+				},
+				"button": {
+					"submit": "Next &rsaquo;"
+				}
 			}
+		},
+		"main": {
+			
 		}
 	}
 }
