More updates to the setup process. Still a work in progress.

--- a/app/lang/en.json
+++ b/app/lang/en.json
@@ -21,7 +21,7 @@
 		"setup": {
 			"index": {
 				"title": "Welcome to Johannes",
-				"intro": "You have taken the first few steps toward a more pleasant content experience. You can <a href=\"/_johannes\">learn more about Johannes</a> or finishes the process below.",
+				"intro": "You have taken the first few steps toward a more pleasant content experience. You can <a href=\"/_johannes\">learn more about Johannes</a> or finish the process below.",
 				"noDb": "We had a problem trying to connect to your CouchDB server. Check your settings in the <code>config.json</code> file and try reloading this page.",
 				"remote": "You are trying to access Johannes from another computer while it is not setup. By default this isn't allowed. If you need to do it, then edit the <code>config.json</code> file.",
 				"start": "Your system is ready to be setup. Follow the steps below to get started."
@@ -40,6 +40,9 @@
 				"button": {
 					"submit": "Save Database Information &rsaquo;"
 				}
+			},
+			"errors": {
+				"remotesetup": "Cannot save config remotely."
 			}
 		},
 		"admin": {
